--- a/messages.html
+++ b/messages.html
@@ -313,26 +313,22 @@
     
     <!-- 底部导航栏 -->
     <div class="tab-bar">
-        <div class="tab-item">
+        <a href="home.html" class="tab-item">
             <i class="tab-icon fas fa-home"></i>
             <span>首页</span>
-        </div>
-        <div class="tab-item">
-            <i class="tab-icon fas fa-compass"></i>
+        </a>
+        <a href="feed.html" class="tab-item">
+            <i class="tab-icon fas fa-fire"></i>
             <span>动态</span>
-        </div>
-        <div class="tab-item">
-            <i class="tab-icon fas fa-plus-circle text-xl"></i>
-            <span></span>
-        </div>
-        <div class="tab-item active">
+        </a>
+        <a href="messages.html" class="tab-item active">
             <i class="tab-icon fas fa-bell"></i>
             <span>消息</span>
-        </div>
-        <div class="tab-item">
+        </a>
+        <a href="profile.html" class="tab-item">
             <i class="tab-icon fas fa-user"></i>
             <span>我的</span>
-        </div>
+        </a>
     </div>
 </body>
 </html>
